test/good/functions/name02.px

func T'4_EST'p2'() Int def
    return 7

print T'4_EST'p2'()
