test/bad/classes/print04.px

class Test def
    func toString() def
        return 'x'

print Test()
